# Personal-Python-Projects

./: README.md
achitect/: readme.md  scraper.py
bankyleaks/: fields.txt  main.py  readme.md  sod_working.py
bankyleaks/api/: api_client.py
bankyleaks/config/: config.py
bankyleaks/marketshare/: sod_ms.py
bankyleaks/metadata/: __init__.py  demographics_properties.yaml  financials_properties.py  financials_properties.yaml  institution_properties.yaml  sod_properties.py  (+1 more)
isoreach/: branch_polys.py  cust_in_isos.py
platypus/: MANIFEST.in  README.md  __init__.py  environment-dev.yml  environment.yml  pyproject.toml  setup.cfg  soql_queries.py  tox.ini
platypus-databridge/: LICENSE  main.py  main_soql.py  parquet_file_mover.py  readme.md  utils.py
platypus/dremio_client/: __init__.py  auth.py  client.py  data_fetcher.py  data_saver.py  query_executor.py
platypus/salesforce_client/: __init__.py  client.py  data_fetcher.py  data_saver.py  query_executor.py
platypus/tests/: conftest.py  test_dremio_data_saver.py  test_hyper_file_creator.py  test_salesforce_client.py  test_salesforce_data_fetcher.py  test_salesforce_data_saver.py  test_salesforce_query_executor.py
platypus/utils/: __init__.py  data_cleaning.py  file_utils.py  hyper_file_utils.py
swift_code_scraper/: README.md  main.py
tableau_ops/: config.yaml  example.py  metadata.py  orchestrator.py  readme.md  test_file.py
tessellate/: README.md  branch_orig_tx_dev.py  branch_tract_population_multi_state.py  branch_tract_population_texas.py  customer_tract_matching.py  generate_census_pop_geoid.py
(+14 files in other folders)
