[metadata]
name = platypus
version = 0.1.0
author = Nate Sickler
description = A utility package for data engineering, analytics, and machine learning tasks
long_description = file: README.md
long_description_content_type = text/markdown

url = ''

classifiers =
    Programming Language :: Python :: >=3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pandas
    duckdb
    polars
    pyarrow
    python-dotenv
    pyodbc
    simple-salesforce
    tableauhyperapi
    rapidfuzz

[options.extras_require]

dev =
    pytest
    coverage
    flake8

[tool:pytest]
testpaths = tests
